--- a/src/it/java-version/property/pom.xml
+++ b/src/it/java-version/property/pom.xml
@@ -35,6 +35,7 @@ under the License.
     <maven.compiler.source>1.3</maven.compiler.source>
     <maven.compiler.target>1.3</maven.compiler.target>
     <!--maven.compiler.target>${maven.compiler.source}</maven.compiler.target-->
-    <!-- with Maven 3.3.x, this ${maven.compiler.source} property is interpolated to 1.5 instead of 1.3...-->
+    <!-- MINVOKER-194: with Maven 3.3.x, this ${maven.compiler.source} property is interpolated
+         in invoker to 1.5 instead of 1.3 -->
   </properties>
 </project>
